[gd_scene load_steps=15 format=3 uid="uid://dbmb6krhojteh"]

[ext_resource type="Texture2D" uid="uid://ck1fna0um0lp2" path="res://resources/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="Script" path="res://scrips/interface.gd" id="3"]
[ext_resource type="FontFile" uid="uid://d4b8em8ij0wqx" path="res://resources/Abaddon Bold.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://fy3diwopwkf3" path="res://resources/Ps4_Xbox_Controller_Buttons/Ps4_Xbox_Controller_Buttons_v1.0/Spritesheet/icons_xbox_animated_buttons2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://djq8ee2lpqc2c" path="res://resources/Ps4_Xbox_Controller_Buttons/Ps4_Xbox_Controller_Buttons_v1.0/Spritesheet/icons_xbox_animated_dpad1.png" id="6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_81sx7"]
texture = ExtResource("1")
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
11:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
11:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
11:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_5srq6"]
sources/0 = SubResource("TileSetAtlasSource_81sx7")

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(224, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_femo6"]
size = Vector2(32, 22)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="6"]
Label/fonts/font = SubResource("5")

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="Theme" id="4"]
Label/styles/normal = SubResource("3")

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="TileMap" type="TileMap" parent="Area2D"]
tile_set = SubResource("TileSet_5srq6")
cell_quadrant_size = 4
format = 2
layer_0/tile_data = PackedInt32Array(524289, 196608, 1, 524290, 262144, 1, 524291, 262144, 1, 524292, 262144, 1, 524293, 262144, 1, 524294, 262144, 1, 524295, 262144, 1, 524296, 262144, 1, 524297, 262144, 1, 524298, 262144, 1, 524299, 262144, 1, 524300, 262144, 1, 524301, 262144, 1, 524302, 327680, 1, 393230, 851968, 3, 393229, 589824, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(128, 133)
shape = SubResource("2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(224, 100)
shape = SubResource("RectangleShape2D_femo6")

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(128, 77)
scale = Vector2(1.25, 1.25)

[node name="interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="interface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("6")

[node name="X" type="HBoxContainer" parent="interface/VBoxContainer"]
layout_mode = 2

[node name="x" type="Label" parent="interface/VBoxContainer/X"]
layout_mode = 2
theme = SubResource("4")
text = "X :"

[node name="posx" type="Label" parent="interface/VBoxContainer/X"]
layout_mode = 2

[node name="Y" type="HBoxContainer" parent="interface/VBoxContainer"]
layout_mode = 2

[node name="y" type="Label" parent="interface/VBoxContainer/Y"]
layout_mode = 2
text = "Y :"

[node name="posy" type="Label" parent="interface/VBoxContainer/Y"]
layout_mode = 2

[node name="Button" type="Sprite2D" parent="interface/VBoxContainer"]
position = Vector2(207, 11)
texture = ExtResource("5")
hframes = 3
vframes = 4

[node name="Button2" type="Sprite2D" parent="interface/VBoxContainer"]
position = Vector2(188, 11)
texture = ExtResource("5")
hframes = 3
vframes = 4
frame = 6

[node name="Button3" type="Sprite2D" parent="interface/VBoxContainer"]
position = Vector2(226, 11)
texture = ExtResource("6")
hframes = 3
vframes = 4
frame = 9

[node name="Button4" type="Sprite2D" parent="interface/VBoxContainer"]
position = Vector2(245, 11)
texture = ExtResource("6")
hframes = 3
vframes = 4
frame = 3
